tests/snapshots/snapshot_tests__array_max_min_approx.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_max_min_approx.vmt",
    status: Good,
    used_instantiations: [],
}
