tests/snapshots/snapshot_tests__array_max_min_shift.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_max_min_shift.vmt",
    status: Panic,
    used_instantiations: [],
}
