tests/snapshots/snapshot_tests__array_min.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_min.vmt",
    status: Good,
    used_instantiations: [],
}
