tests/snapshots/snapshot_tests__array_min_and_copy.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_min_and_copy.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int b Z j_next) Z) j_next)",
        "(= (Read-Int-Int (Write-Int-Int b Z j_next) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int b_next Z j) Z) j)",
        "(= (Read-Int-Int (Write-Int-Int b Z j) Z) j)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!10 Z j) Z) j)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!10 Z j) Z) (Read-Int-Int Array-Int-Int!val!10 Z))",
        "(= (Read-Int-Int (Write-Int-Int b Z j) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int b_next Z j) Z) (Read-Int-Int b_next Z))",
    ],
}
