tests/snapshots/snapshot_tests__array_min_and_copy_inverse.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_min_and_copy_inverse.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int b_next Z j) Z) j)",
        "(= (Read-Int-Int (Write-Int-Int b_next Z j) Z) (Read-Int-Int b_next Z))",
    ],
}
